--- a/web/views/Orders/orders.html
+++ b/web/views/Orders/orders.html
@@ -36,6 +36,12 @@
                     </span>
                     <h3>Dashboard</h3>
                 </a>
+                <a href="../stock/stock.html">
+                    <span class="material-icons-sharp">
+                        inventory
+                    </span>
+                    <h3>Stock</h3>
+                </a>
                 <a href="../users/users.html">
                     <span class="material-icons-sharp">
                         person
@@ -48,7 +54,7 @@
                     </span>
                     <h3>New Users</h3>
                 </a>
-                <a href="../groups/group.html" class="active">
+                <a href="../groups/group.html">
                     <span class="material-icons-sharp">group</span>
                     <h3>Groups</h3>
                 </a>
@@ -58,7 +64,7 @@
                     </span>
                     <h3>Tables</h3>
                 </a>
-                <a href="../categorys/category.html" class="active">
+                <a href="../categorys/category.html" >
                     <span class="material-icons-sharp">
                         category
                     </span>
@@ -76,7 +82,7 @@
                     </span>
                     <h3>New product</h3>
                 </a>
-                <a href="../Orders/orders.html" id="orders-link">
+                <a href="../Orders/orders.html" id="orders-link" class="active">
                     <span class="material-icons-sharp">
                         list_alt
                     </span>
